[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Money/Money.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/impactMining_000.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/impactMining_003.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/impactMining_004.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/impactMining_002.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/impactMining_001.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/cha-ching.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/fonts/AlteHaasGroteskBold.ttf" type="DynamicFontData" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 490.299, 142.2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 10 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
Money = ExtResource( 2 )

[node name="Wallet" type="Area2D" parent="."]
position = Vector2( 649, 104.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Wallet"]
position = Vector2( -69, 48.75 )
scale = Vector2( 1.18649, 1.4875 )
color = Color( 0.192157, 0.631373, 0.0352941, 1 )
polygon = PoolVector2Array( -486.9, -100.135, -486.9, 99.5292, 370, 100, 370, -100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wallet"]
position = Vector2( -139.5, 45 )
shape = SubResource( 1 )

[node name="Money" type="Node" parent="."]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = -46.0
margin_right = 104.5
margin_bottom = 46.0
window_title = "Hai vinto!"
dialog_text = "Complimenti! 
Hai completato questo livello.
Torna alla schermata iniziale."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Sounds" type="Node" parent="."]

[node name="Ding1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="Ding2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="Ding3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="Ding4" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Ding5" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="Control" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 80.0
custom_constants/margin_right = 800
custom_constants/margin_top = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PayButton" type="Button" parent="Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 224.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "PAGA"
[connection signal="area_entered" from="Wallet" to="." method="_on_Wallet_area_entered"]
[connection signal="area_exited" from="Wallet" to="." method="_on_Wallet_area_exited"]
[connection signal="confirmed" from="CanvasLayer/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="pressed" from="Control/MarginContainer/PayButton" to="." method="_on_PayButton_pressed"]
